--- a/index.html
+++ b/index.html
@@ -6,111 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/64d9aa87c9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Responsive Nav</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            list-style: none;
-        }
-
-        nav {
-            justify-content: space-between;
-            display: flex;
-            align-items: center;
-            float: right;
-            width: 50%;
-            font-size: 24px;
-        }
-
-        label {
-            width: 100%;
-            background-color: green;
-            padding: 16px;
-            font-size: 32px;
-            cursor: pointer;
-            display: none;
-
-        }
-
-        input {
-            display: none;
-        }
-
-        .nav-items {
-            background-color: blueviolet;
-            height: 64px;
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .nav-items li {
-            cursor: pointer;
-            padding: 16px;
-            border-radius: 16px;
-            transition: 0.3s;
-        }
-
-        .nav-items li:hover {
-            background-color: white;
-            color: black;
-        }
-
-        @media (max-width: 880px) {
-            nav {
-                flex-direction: column;
-                align-items: flex-end;
-                justify-content: flex-start;
-                height: auto;
-            }
-
-            .nav-items {
-                margin-top: 64px;
-                height: auto;
-                overflow: hidden;
-                width: 0;
-                opacity: 0;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                gap: 24px;
-            }
-
-            label {
-                z-index: 999;
-                position: fixed;
-                display: flex;
-                justify-content: flex-end;
-            }
-
-            input:checked~.nav-items {
-                overflow: scroll;
-                animation-name: change-width;
-                animation-duration: 0.3s;
-                animation-fill-mode: forwards;
-            }
-
-            @keyframes change-width {
-                to {
-                    opacity: 1;
-                    width: 100%;
-                }
-            }
-        }
-
-        @media (max-width: 650px) {
-            nav {
-                width: 100%;
-            }
-        }
-    </style>
 </head>
 
 <body>
     <nav>
-        <input style="width: 24px; height: 24px;" type="checkbox" id="hack">
+        <input type="checkbox" id="hack">
         <label for="hack"><i class="fa-solid fa-bars"></i></label>
         <ul class="nav-items">
             <li class="home">Home</li>
